--- a/FirstWebAPI/FirstWebAPI/ClientApp/src/index.html
+++ b/FirstWebAPI/FirstWebAPI/ClientApp/src/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <div>Content of my app</div>
   <app-root>Loading...</app-root>
 </body>
 </html>
